Added experiments and updated report

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -155,3 +155,11 @@
     doi     = {10.1007/s10957-021-01896-x},
     url     = {https://doi.org/10.1007/s10957-021-01896-x},
 }
+
+
+@misc{stepsizes,
+    author = {Marina A. Epelman},
+    title = {IOE 511/Math 652: Continuous Optimization Methods, Section 1},
+    year = {2007},
+    note = {Lecture notes \url={http://www-personal.umich.edu/~mepelman/teaching/511notesFA07.pdf}}
+}
