--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -124,42 +124,17 @@
     note = {First draft: June 15, 2020; Last update: December 24, 2020. Université de Mons, \url{https://angms.science/doc/CVX/Proj_simplex.pdf}}
 }
 
-@article{DunningHuchetteLubin2017,
-    author = {Iain Dunning and Joey Huchette and Miles Lubin},
-    title = {JuMP: A Modeling Language for Mathematical Optimization},
-    journal = {SIAM Review},
-    volume = {59},
-    number = {2},
-    pages = {295-320},
-    year = {2017},
-    doi = {10.1137/15M1020575},
-}
-
-@article{ocpb:16,
-    author       = {Brendan O'Donoghue and Eric Chu and Neal Parikh and Stephen Boyd},
-    title        = {Conic Optimization via Operator Splitting and Homogeneous Self-Dual Embedding},
-    journal      = {Journal of Optimization Theory and Applications},
-    month        = {June},
-    year         = {2016},
-    volume       = {169},
-    number       = {3},
-    pages        = {1042-1068},
-    url          = {http://stanford.edu/~boyd/papers/scs.html},
-}
-
-@Article{Garstka_2021,
-    author  = {Michael Garstka and Mark Cannon and Paul Goulart},
-    journal = {Journal of Optimization Theory and Applications},
-    title   = {{COSMO}: A Conic Operator Splitting Method for Convex Conic Problems},
-    year    = {2021},
-    doi     = {10.1007/s10957-021-01896-x},
-    url     = {https://doi.org/10.1007/s10957-021-01896-x},
-}
-
-
 @misc{stepsizes,
     author = {Marina A. Epelman},
     title = {IOE 511/Math 652: Continuous Optimization Methods, Section 1},
     year = {2007},
     note = {Lecture notes \url={http://www-personal.umich.edu/~mepelman/teaching/511notesFA07.pdf}}
+}
+
+@inproceedings{Lofberg2004,
+    address = {Taipei, Taiwan},
+    author = {L{\"{o}}fberg, J.},
+    booktitle = {In Proceedings of the CACSD Conference},
+    title = {YALMIP : A Toolbox for Modeling and Optimization in MATLAB},
+    year = {2004}
 }
