--- a/report/report.tex
+++ b/report/report.tex
@@ -67,7 +67,11 @@
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
 
-\newcolumntype{L}{>{$}l<{$}} % math-mode version of "l" column type
+\def\changemargin#1#2{\list{}{\rightmargin#2\leftmargin#1}\item[]}
+\let\endchangemargin=\endlist 
+
+
+
 
 \title{Project Non-ML 5\\Final Project for the CM course 2020/21}
 \author{Matteo De Francesco}
@@ -487,24 +491,24 @@ From this we understand that having a zero duality gap implies optimality of the
 \] 
 for each $\lambda_i$ computed during iterations.\\
 The starting value of the $\lambda$'s iterates is a vector of ones and the starting $x$ is computed immediately using the starting $\lambda$ and the factorization explained before.\\
-Lastly, an optional parameter is given as input to the algorithm. The parameter $defl$ is a boolean value indicating the use of deflection or not, whose derivation is described in the Appendix \ref{sec:appendix_C}.\\
+% Lastly, an optional parameter is given as input to the algorithm. The parameter $defl$ is a boolean value indicating the use of deflection or not, whose derivation is described in the Appendix \ref{sec:appendix_C}.\\
 Putting everything together, we obtain a slightly different algorithm than \ref{alg:adagrad}:
 
 \begin{algorithm}[H]
   \caption{\texttt{ADAGRAD} on our dual problem}
   \label{alg:my_alg}
   \begin{algorithmic}
-    \Function{\texttt{ADAGRAD}}{$\eta$, $\delta$, $\varepsilon$, $\tau$, $max\_iter$, $defl$}
+    \Function{\texttt{ADAGRAD}}{$\eta$, $\delta$, $\varepsilon$, $\tau$, $max\_iter$}
       \State $\lambda_0 \gets 1$
       \State $g_{1:0} \gets \left[\,\right]$
       \State $x_0 \gets$ system solution  
       \State $\phi = \phi(\lambda_0)$
       \For{$t \gets 1$ to $max\_iter$}
         \State $g_t \gets \dfrac{\partial \psi_\lambda(\lambda)}{\partial \lambda}$\Comment{Compute subgradient \ref{sec:appendix_B}}
-        \If{$defl$}\Comment{Compute deflection}
-            \State Compute $\gamma$ using \ref{sec:appendix_C}
-            \State Update $g_t = \gamma g_t + (1 - \gamma) g_{t-1}$
-          \EndIf
+        % \If{$defl$}\Comment{Compute deflection}
+        %     \State Compute $\gamma$ using \ref{sec:appendix_C}
+        %     \State Update $g_t = \gamma g_t + (1 - \gamma) g_{t-1}$
+        %   \EndIf
         \State $g_{1:t} \gets \left[ g_{1:t-1}\ g_t \right]$\Comment{Store subgradient}
         \State $s_{t,i} \gets \| g_{1:t,i} \|_2$\Comment{Solution of the problem \ref{sec:convergence}}
         \State $H_t = \gets \delta \mathit{I} + diag(s_t)$
@@ -529,8 +533,8 @@ Putting everything together, we obtain a slightly different algorithm than \ref{
 The ideas above described have been implemented using Julia. The provided package give us the ability to provide the dimension of the problem $n$ and the number of simplices $K$.\\
 Subsequently, the code is all automated and provide the creation of the matrix $Q \succeq 0$, $A$, the random sets $I^k$, the vector $q$ and all the required parameters. The update rules that you want 
 to test can be chosen as well as the different stepsize rules that you want to employ.\\
-The structures created are stored in \textit{mat} file and load each time to avoid time consumption in the creation of the different objects and also for the derivation of the optimal primal solution. 
-Indeed this latter is found using the off-the-shelf solver YALMIP, available on MATLAB, where the generated \textit{mat} file is stored and a simple script is used to derive the primal solution.\\
+The structures created are stored in \textit{mat} file and loaded each time to avoid time consumption in the creation of the different objects and also for the derivation of the optimal primal solution. 
+Indeed this latter is found using the off-the-shelf solver \texttt{YALMIP} \cite{Lofberg2004}, available on \texttt{MATLAB}, where the generated \textit{mat} file is stored and a simple script is used to derive the primal solution.\\
 Also, there are some hyperparameters which can be modified by the user inside \textit{main.jl}, like the maximum number of iterations and the $\varepsilon$ value to check the $\lambda$ residual.\\
 All the values assumed by each $\lambda$-norm and $x$-norm residual, the number of iterations, the value of the dual function and the gap at the current iteration are stored in a \textit{csv} file. 
 The last one is used then to generate some plots showing the convergence towards the optimal solution.\\
@@ -539,41 +543,43 @@ In order to test the program on different problem dimensions, we have chosen dif
 
 % MODIFICA TABELLA VALORI
 \begin{center}
-  \begin{tabular}[H]{| L | L | L | L | L | L | L |}
+  \resizebox{\columnwidth}{!}{%
+  \begin{tabular}[H]{| c | c | c | c | c | c | c | c |}
     \hline
-    \mathbf{n} & \mathbf{K} & \pmb{\varepsilon} & \pmb{\tau} & \pmb{\alpha} & \mathbf{max\_iter} \\
+    $\mathbf{n}$ & $\mathbf{K}$ & $\pmb{\varepsilon}$ & $\pmb{\tau}$ & $\pmb{\alpha}$ & $\mathbf{h}$ & $\pmb{\delta}$ & $\mathbf{max\_iter}$ \\
     \hline
-    1000 & \left[20\right] & 10^{-14} & 10^{-8} & 0.8 & 100000 \\
+    $1000$ & $\left[20\right]$ & \multirow{2}{*}{$10^{-14}$} & $10^{-7}$ & $0.8$ & $\left[\,\right]$ & \multirow{2}{*}{$10^{-16}$} & \multirow{2}{*}{$100000$} \\
+    \cline{1-2} \cline{4-6}
+    $5000$ & $\left[10\right]$ & & $10^{-6}$ & $0.3$ & $\left[200, 25, 5, 2, 10^{-2}, 10^{-3} \right]$ & & \\
     \hline
-    5000 & \left[10\right] & 10^{-14} & 10^{-6} & 0.3 & 100000 \\
-    \hline
-  \end{tabular}  
+  \end{tabular}%  
   \label{tab:experiments}
+  }
 \end{center}
 
 % Note that in each execution also the value of $defl$ was set to true.\\
 The code was executed using Julia \textit{REPL} tool. It has a slowish startup time, so the first execution are "warm-up" execution, but as soon as the entire code is compiled, all modules are loaded and the needed memory is computed. 
-The matrix $Q$ is the resulting covariance matrix of a random generated matrix $A_h$, in formula: 
+$Q$ is the resulting covariance matrix of a random generated matrix $A_h$, in formula: 
 \[
   Q = A_h^T * A_h  
 \]
 which we know being symmetric and surely positive semidefinite.\\
 Regarding the factorization, the entire KKT matrix is factorized using the \textit{Julia} method \texttt{lu!()}.\\
-Another observation regard the subgradient. Being the $\phi$ non differentiable in the general case, the direction is not guaranteed to be ascent/descent. So we keep track of the best $\phi(\lambda)$, best iteration, best $x$ 
+Another observation regard the subgradient: being the $\phi$ non differentiable in the general case, the direction is not guaranteed to be ascent/descent. So we keep track of the best $\phi(\lambda)$, best iteration, best $x$ 
 and $\lambda$ to get the suboptimal solution found. This sometimes result in the dual function being minimized instead of maximized. In certain cases we observed also that when we reach a negative dual gap (due to big steps and not feasibility of the
 actual iterates) changing the direction of the subgradient brings improvement in reaching the solution.\\
 Last but not least, we noticed in the experiments that the stepsize selection is crucial for the convergence of the algorithm. In particular, the value of the hyperparameters $\alpha$, $\beta$ and $\delta$ should be chosen ad-hoc to guarantee 
 that we have a "smooth" optimization.\\
 What we noticed in particular is about the different update rules and hyperparameters. As already said, the value of $\alpha$, $\beta$ and $\delta$ are fundamental, the latter for the update rules \eqref{eqn:primal-dual-update} 
 and \eqref{eqn:composite-mirror-update} while the first two for the standard \eqref{eqn:standard-rule}.\\
-In the first two mentioned updates, the value of $H_t^{-1}$ acts as a sort of "regularizer", scaling in both cases the big value of the gradient. Modifying $\delta$ impacts primarly on the steps taken, with smaller value of it resulting in 
+In the first two mentioned updates, the value of $H_t^{-1}$ acts as a sort of "regularizer", scaling in both cases the value of the gradient. Modifying $\delta$ impacts primarly on the steps taken, with smaller value of it resulting in 
 bigger steps while a low value of it result in a very low convergence (even too much).\\
-Referring always to these two updates, the only stepsize rule that give a "fast" convergence with big steps is the first one, a constant stepsize with an high value of $h$. Of course, when we reach a smaller dual gap we decrease $h$ switching to the 
-Polyak stepsize in the tail (to have a smooth finish).\\
+Referring always to these two updates, the only stepsize rule that give a "fast" convergence with big steps is the first one, a constant stepsize with a variable value of $h$. We change the value of $h$ during iteration making it smaller as soon 
+as we reach the optimal gap.\\
 The rule \eqref{eqn:primal-dual-update} shows no improvement even adjusting these parameters, while rule \eqref{eqn:composite-mirror-update} converges slowly with respect to the standard one.\\
 Indeed it is rule \eqref{eqn:standard-rule} that give us the best results: we are capable of reaching the desired dual gap in fewer iterations, adjusting the value of the hyperparameters. In this case, we used the nonsummable diminishing rule 
 fixing the value of $\alpha$, switching to Polyak stepsize in the tail.\\
-We can show some plots and timing results of the experiments reported in the table
+We can show some plots and timing results of the experiments reported in the table:
 % We can report now some plots comparing the results of the executions obtained together with the total time spent in the algorithm execution, with fixed value of $n=50$, number of simplices set $K=40$, first using a positive definite $Q$
 % and then a positive semidefinite $Q$.\\
 % Following, a table will sum up all the results obtained.\\
@@ -581,45 +587,74 @@ We can show some plots and timing results of the experiments reported in the tab
 
 \newgeometry{left=0.5cm, right=0.5cm, bottom=0.5cm, top=0.5cm}
 
+% \hspace{0pt}
+% \vfill
+
+% \begin{figure}[H]
+%   \centering
+%   \includegraphics[scale=0.67]{pics/n=1000_K=20_gap_rule=1.png}
+%   \caption{Dual gap with update rule $1$, $n=1000$ and $K=20$}
+%   \label{fig:rule-1-n-1000-k-20-gap}
+% \end{figure}
+
+% \begin{figure}[H]
+%   \begin{minipage}{0.49\textwidth}
+%     \centering
+%     \includegraphics[scale=0.33]{pics/n=1000_K=20_dual_rule=1.png}
+%     \caption{Dual value with update rule $1$, $n=1000$ and $K=20$}
+%     \label{fig:rule-1-n-1000-k-20-dual}
+%   \end{minipage}
+%   \begin{minipage}{0.49\textwidth}
+%     \centering
+%     \includegraphics[scale=0.33]{pics/n=1000_K=20_lambda_rule=1.png}
+%     \caption{Norms with update rule $1$, with $n=1000$ and $K=20$}
+%     \label{fig:rule-1-n-1000-k-20-norm}
+%   \end{minipage}  
+% \end{figure}
+
+% \vfill
+% \hspace{0pt}
+
+% \newpage
+
 \hspace{0pt}
 \vfill
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[scale=0.65]{pics/n=1000_K=20_gap_rule=1.png}
-  \caption{Dual gap with update rule $1$, $n=1000$ and $K=20$}
-  \label{fig:rule-1-n-1000-k-20-gap}
-\end{figure}
-
-\begin{figure}[H]
-  \begin{minipage}{0.49\textwidth}
+\begin{minipage}{.7\textwidth}
+  \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.33]{pics/n=1000_K=20_dual_rule=1.png}
-    \caption{Dual value with update rule $1$, $n=1000$ and $K=20$}
-    \label{fig:rule-1-n-1000-k-20-dual}
-  \end{minipage}
-  \begin{minipage}{0.49\textwidth}
+    \includegraphics[scale=0.5]{pics/n=5000_K=10_gap_rule=1.png}
+    \caption{Dual gap with update rule $1$, $n=5000$ and $K=10$}
+    \label{fig:rule-1-n-5000-k-10-gap}
+  \end{figure}
+\end{minipage}
+\begin{minipage}{.3\textwidth}
+  \begin{table}[H]
     \centering
-    \includegraphics[scale=0.33]{pics/n=1000_K=20_lambda_rule=1.png}
-    \caption{Norms with update rule $1$, with $n=1000$ and $K=20$}
-    \label{fig:rule-1-n-1000-k-20-norm}
-  \end{minipage}  
-\end{figure}
+    \resizebox{\columnwidth}{!}{%
+    \begin{tabular}{| c | c |}
+      \hline
+      {\itshape Total iterations} & $3092$ \\
+      \hline
+      {\itshape total time (sec)} & $665.3 \, s$ \\
+      \hline 
+      {\itshape Best } $\phi(\lambda) - f(x^*)$ & $1.414e$$-$$06$ \\
+      \hline
+      {\itshape Best iteration} & $3092$ \\
+      \hline
+      {\itshape Best } $\psi(\lambda)$ & $1.202e$$+$$05$ \\
+      \hline
+      {\itshape Best } $\| \lambda_{t} - \lambda_{t-1} \|$ & $2.586e$$-$$08$ \\
+      \hline
+      {\itshape Best } $\| x_{t} - x_{t-1} \|$ & $5.190e$$-$$11$ \\
+      \hline
+    \end{tabular}
+    }%
+    \caption{\centering Sum up table}
+    \label{tab:n-5000-K-10-rule-1}
+  \end{table}
+\end{minipage}
 
-\vfill
-\hspace{0pt}
-
-\newpage
-
-\hspace{0pt}
-\vfill
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[scale=0.65]{pics/n=5000_K=10_gap_rule=1.png}
-  \caption{Dual gap with update rule $1$, $n=5000$ and $K=10$}
-  \label{fig:rule-1-n-5000-k-10-gap}
-\end{figure}
 
 \begin{figure}[H]
   \begin{minipage}{0.49\textwidth}
@@ -635,6 +670,78 @@ We can show some plots and timing results of the experiments reported in the tab
     \label{fig:rule-1-n-5000-k-10-norm}
   \end{minipage}  
 \end{figure}
+
+\begin{changemargin}{3.5cm}{3.5cm}
+  As we can see by the results of the update rule 1, the slope of the curve change in the tail, reaching an optimal dual gap. This is due to the big function value we have 
+  and the stepsize we employ. In the tail, we can see how the value start oscillating near the optimal achieving the desired dual gap after a few iterations.\\
+  The same holds for the norms of the variables, oscillating but achieving an almost zero change in the tail.
+\end{changemargin}
+
+
+\vfill
+\hspace{0pt}
+
+\newpage
+
+\hspace{0pt}
+\vfill
+
+\begin{minipage}{.7\textwidth}
+  \begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.5]{pics/n=5000_K=10_gap_rule=3.png}
+    \caption{Dual gap with update rule $3$, $n=5000$ and $K=10$}
+    \label{fig:rule-3-n-5000-k-10-gap}
+  \end{figure}
+\end{minipage}
+\begin{minipage}{.3\textwidth}
+  \begin{table}[H]
+    \centering
+    \resizebox{\columnwidth}{!}{%
+    \begin{tabular}{| c | c |}
+      \hline
+      {\itshape Total iterations} & $4379$ \\
+      \hline
+      {\itshape total time (sec)} & $952.5 \, s$ \\
+      \hline 
+      {\itshape Best } $\phi(\lambda) - f(x^*)$ & $5.243e$$-$$08$ \\
+      \hline
+      {\itshape Best iteration} & $4379$ \\
+      \hline
+      {\itshape Best } $\psi(\lambda)$ & $1.202e$$+$$05$ \\
+      \hline
+      {\itshape Best } $\| \lambda_{t} - \lambda_{t-1} \|$ & $1.471e$$-$$09$ \\
+      \hline
+      {\itshape Best } $\| x_{t} - x_{t-1} \|$ & $4.153e$$-$$05$ \\
+      \hline
+    \end{tabular}
+    }%
+    \caption{\centering Sum up table}
+    \label{tab:n-5000-K-10-rule-3}
+  \end{table}
+\end{minipage}
+
+
+\begin{figure}[H]
+  \begin{minipage}{0.49\textwidth}
+    \centering
+    \includegraphics[scale=0.33]{pics/n=5000_K=10_dual_rule=3.png}
+    \caption{Dual value with update rule $3$, $n=5000$ and $K=10$}
+    \label{fig:rule-3-n-5000-k-10-dual}
+  \end{minipage}
+  \begin{minipage}{0.49\textwidth}
+    \centering
+    \includegraphics[scale=0.33]{pics/n=5000_K=10_lambda_rule=3.png}
+    \caption{Norms with update rule $3$, with $n=5000$ and $K=10$}
+    \label{fig:rule-3-n-5000-k-10-norm}
+  \end{minipage}  
+\end{figure}
+
+\begin{changemargin}{3.5cm}{3.5cm}
+  As we can see by the results of the update rule 3, here we perform different steps, by adjusting the value of $h$ during the optimization. Indeed the slope of the curve
+  change also in the end, this time with a more high value. The same happens also in this case, we start oscillating around the optimal value until we get the desired dual gap.\\
+  The norms too oscillate around very small values.
+\end{changemargin}
 
 \vfill
 \hspace{0pt}
@@ -801,11 +908,11 @@ All the code is contained inside the \texttt{src} folder:
 \begin{itemize}
   \item \textit{Utils.jl}: module containing some useful functions:
   \begin{itemize}
-    \item \texttt{construct\_full\_matrix($Q$, $A$, $K$)}: return the entire matrix used to solve the lagrangian relaxation;
+    \item \texttt{construct\_full\_matrix($Q$, $A$, $K$)}: return the entire KKT matrix;
     \item \texttt{construct\_A($K$, $n$, $I_K$)}: return the constraint matrix $A$ as described in the report;
     % \item \texttt{compute\_dualvalue($Q$,$q$,$x$,$\lambda$)}: compute the dual function $x^T Q x + q^T x - \lambda^T x$, using the solution $x$ of the lagrangian relaxation and the new $\lambda$ iterate
   \end{itemize}
-  \item \textit{ConvexSolution.jl}: module computing the off-the-shelf primal solution, containing a struct describing the problem parameters and a function to compute and return the optimal value found
+  % \item \textit{ConvexSolution.jl}: module computing the off-the-shelf primal solution, containing a struct describing the problem parameters and a function to compute and return the optimal value found
   \item \textit{ADAGRAD\_Solver.jl}: module containing:
   \begin{itemize}
     \item a struct \texttt{Solver}, containing all the parameters and return value needed for the problem;
@@ -813,6 +920,7 @@ All the code is contained inside the \texttt{src} folder:
     \item \texttt{my\_ADAGRAD}, which implement the algorithm derived in the report;
   \end{itemize}
   \item \textit{main.jl}: used to test all the code;
+  \item \textit{solve\_prob.m}: \texttt{MATLAB} script to compute optimal primal solution using \texttt{YALMIP};
 \end{itemize}
 In addition, the entire project folder contains:
 \begin{itemize}
@@ -820,6 +928,7 @@ In addition, the entire project folder contains:
   \item \textit{results}: folder containing all the plots and logs obtained with the experimentations values of table \ref{tab:experiments};
   \item \textit{util.sh}: a clean-up routine for the \textit{logs} and \textit{plots} produced;
   \item \textit{analyzer.py}: used to inspect the collected \textit{.csv} files and get some stats;
+  \item \textit{plotter.py}: used to generate plots from the \textit{.csv} files;
 \end{itemize}
 
 
@@ -1004,53 +1113,53 @@ interval $\left[a,b\right]$ such that
 where the $^+$ and $^-$ portion must have a certain value greater than zero (order of $10^{-2}$).
 
 
-\section{Appendix C: \texorpdfstring{$\gamma$}{TEXT} computation}
-\label{sec:appendix_C}
-Deflection is a way to change the direction of the computed subgradient by using a convex combination
-\[
-  d^i = \gamma^i g^i + (1 - \gamma^i) d^{i-1}   
-\]
-where $g^i$ is the subgradient at iteration $i$ and $d^{i-1}$ is the direction computed at the previous step.\\
-To find the best $\gamma^i$ at iteration $i$, we could solve the problem 
-\[
-  \gamma^i \in \argmin{ \{ \| \gamma g^i + (1 - \gamma) d^{i-1} \|^2 : \gamma \in \left[0,1\right] \} }   
-\]
-Hence we have to solve
-\begin{align*}
-  \frac{\partial}{\partial \gamma} \| \gamma g^i + (1 - \gamma) d^{i-1} \|^2
-\end{align*}
-which can be rewritten as
-\begin{align*}
-  \frac{\partial}{\partial \gamma} \sum_{k=1}^n (\gamma_k g_k^i + (1 - \gamma_k) d_k^{i-1})^2 = 0
-\end{align*}
-which result in the following vector
-\begin{gather*}
-  \begin{bmatrix}
-    \dfrac{\partial}{\partial \gamma_1} \sum_{k=1}^n (\gamma_k g_k^i + (1 - \gamma_k) d_k^{i-1})^2 \\[3ex]
-    \dfrac{\partial}{\partial \gamma_2} \sum_{k=1}^n (\gamma_k g_k^i + (1 - \gamma_k) d_k^{i-1})^2 \\[3ex]
-    \vdots \\[3ex]
-    \dfrac{\partial}{\partial \gamma_n} \sum_{k=1}^n (\gamma_k g_k^i + (1 - \gamma_k) d_k^{i-1})^2
-  \end{bmatrix}
-  = \boldsymbol{0} \boldsymbol{\implies} 
-  \begin{bmatrix}
-    \dfrac{\partial}{\partial \gamma_1} (\gamma_1 g_1^i + (1 - \gamma_1) d_1^{i-1})^2 \\[3ex]
-    \dfrac{\partial}{\partial \gamma_2} (\gamma_2 g_2^i + (1 - \gamma_2) d_2^{i-1})^2 \\[3ex]
-    \vdots \\[3ex]
-    \dfrac{\partial}{\partial \gamma_n} (\gamma_n g_n^i + (1 - \gamma_n) d_n^{i-1})^2
-  \end{bmatrix}
-  = \boldsymbol{0} \boldsymbol{\implies} \\[2ex]
-  \begin{bmatrix}
-    2 (\gamma_1 g_1^i + (1 - \gamma_1) d_1^{i-1}) (g_1^i - d_1^{i-1}) \\[3ex]
-    2 (\gamma_2 g_2^i + (1 - \gamma_2) d_2^{i-1}) (g_2^i - d_2^{i-1}) \\[3ex]
-    \vdots \\[3ex]
-    2 (\gamma_n g_n^i + (1 - \gamma_n) d_n^{i-1}) (g_n^i - d_n^{i-1})
-  \end{bmatrix}
-  = \boldsymbol{0}
-\end{gather*}
-Isolating each $\gamma_i$, we obtain the following compact value for $\gamma$
-\[
-  \gamma = \dfrac{ (d^{i-1})^2 - g^i }{ (g^i - d^{i-1})^2 }  
-\]
+% \section{Appendix C: \texorpdfstring{$\gamma$}{TEXT} computation}
+% \label{sec:appendix_C}
+% Deflection is a way to change the direction of the computed subgradient by using a convex combination
+% \[
+%   d^i = \gamma^i g^i + (1 - \gamma^i) d^{i-1}   
+% \]
+% where $g^i$ is the subgradient at iteration $i$ and $d^{i-1}$ is the direction computed at the previous step.\\
+% To find the best $\gamma^i$ at iteration $i$, we could solve the problem 
+% \[
+%   \gamma^i \in \argmin{ \{ \| \gamma g^i + (1 - \gamma) d^{i-1} \|^2 : \gamma \in \left[0,1\right] \} }   
+% \]
+% Hence we have to solve
+% \begin{align*}
+%   \frac{\partial}{\partial \gamma} \| \gamma g^i + (1 - \gamma) d^{i-1} \|^2
+% \end{align*}
+% which can be rewritten as
+% \begin{align*}
+%   \frac{\partial}{\partial \gamma} \sum_{k=1}^n (\gamma_k g_k^i + (1 - \gamma_k) d_k^{i-1})^2 = 0
+% \end{align*}
+% which result in the following vector
+% \begin{gather*}
+%   \begin{bmatrix}
+%     \dfrac{\partial}{\partial \gamma_1} \sum_{k=1}^n (\gamma_k g_k^i + (1 - \gamma_k) d_k^{i-1})^2 \\[3ex]
+%     \dfrac{\partial}{\partial \gamma_2} \sum_{k=1}^n (\gamma_k g_k^i + (1 - \gamma_k) d_k^{i-1})^2 \\[3ex]
+%     \vdots \\[3ex]
+%     \dfrac{\partial}{\partial \gamma_n} \sum_{k=1}^n (\gamma_k g_k^i + (1 - \gamma_k) d_k^{i-1})^2
+%   \end{bmatrix}
+%   = \boldsymbol{0} \boldsymbol{\implies} 
+%   \begin{bmatrix}
+%     \dfrac{\partial}{\partial \gamma_1} (\gamma_1 g_1^i + (1 - \gamma_1) d_1^{i-1})^2 \\[3ex]
+%     \dfrac{\partial}{\partial \gamma_2} (\gamma_2 g_2^i + (1 - \gamma_2) d_2^{i-1})^2 \\[3ex]
+%     \vdots \\[3ex]
+%     \dfrac{\partial}{\partial \gamma_n} (\gamma_n g_n^i + (1 - \gamma_n) d_n^{i-1})^2
+%   \end{bmatrix}
+%   = \boldsymbol{0} \boldsymbol{\implies} \\[2ex]
+%   \begin{bmatrix}
+%     2 (\gamma_1 g_1^i + (1 - \gamma_1) d_1^{i-1}) (g_1^i - d_1^{i-1}) \\[3ex]
+%     2 (\gamma_2 g_2^i + (1 - \gamma_2) d_2^{i-1}) (g_2^i - d_2^{i-1}) \\[3ex]
+%     \vdots \\[3ex]
+%     2 (\gamma_n g_n^i + (1 - \gamma_n) d_n^{i-1}) (g_n^i - d_n^{i-1})
+%   \end{bmatrix}
+%   = \boldsymbol{0}
+% \end{gather*}
+% Isolating each $\gamma_i$, we obtain the following compact value for $\gamma$
+% \[
+%   \gamma = \dfrac{ (d^{i-1})^2 - g^i }{ (g^i - d^{i-1})^2 }  
+% \]
 
 
 \end{document}
